Some enchantment in the docker file and removing database waiting

--- a/docker/php-fpm/Dockerfile
+++ b/docker/php-fpm/Dockerfile
@@ -4,12 +4,12 @@ COPY wait-for-it.sh /usr/bin/wait-for-it
 
 RUN chmod +x /usr/bin/wait-for-it
 
-RUN apk --update --no-cache add git
+RUN apk --update --no-cache && apk add git
 
 COPY --from=composer /usr/bin/composer /usr/bin/composer
 
 WORKDIR /var/www
 
-CMD composer install ; wait-for-it database:3306 -- bin/console doctrine:migrations:migrate ;  php-fpm 
+CMD composer install; php-fpm
 
 EXPOSE 9000
